--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 
         <div class="trigger">
             <a class="page-link" href="{{ site.home_url | absolute_url }}">{{ site.home_title | escape }}</a>
-            <a class="page-link" href="{{ site.baseurl | relative_url }}">{{ site.blog_home_title | escape }}</a>
+            <a class="page-link" href="{{ '/' | relative_url }}">{{ site.blog_home_title | escape }}</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
