--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,19 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
+          <ul class="contact-list">
+            <li><a href="https://help-cn.picpiclive.com/portal/newticket" target="_blank">问题与反馈</a></li>
+            <li><a href="https://help-cn.picpiclive.com/portal/kb" target="_blank">帮助中心</a></li>
+            <li><a href="https://help-cn.picpiclive.com/portal/kb/%E8%8D%B7%E6%B4%9B%E7%95%AA%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/%E6%B3%95%E5%BE%8B%E4%BF%A1%E6%81%AF" target="_blank">用户条款</a></li>
+          </ul>
+      </div>
+
+      <div class="footer-col footer-col-4">
+          <ul class="contact-list">
+            <li><a href="{{ site.home_url }}{{ site.live_interactions_url }}">互动功能</a></li>
+            <li><a href="{{ site.home_url }}{{ site.demo_url }}">现场演示</a></li>
+            <li><a href="{{ site.home_url }}{{ site.sponsorship_url }}">获取赞助</a></li>
+          </ul>
       </div>
     </div>
 
