--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
   {{
     "/assets/main.css" | relative_url
   }}
-  "> {%- feed_meta -%} {%- if jekyll.environment == 'production' and
+  ">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css" /> {%- feed_meta -%} {%- if jekyll.environment == 'production' and
   site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%}
 </head>
