add padding for prev next posts

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -299,6 +299,7 @@
 
 .prev-next-posts .next {
   text-align: right;
+  padding-left: 16px;
   @include media-query($on-palm) {
     display: block;
     text-align: center;
@@ -307,7 +308,8 @@
 }
 
 .prev-next-posts .prev {
-  text-align: right;
+  text-align: left;
+  padding-right: 16px;
   @include media-query($on-palm) {
     display: block;
     text-align: center;
