change post document title to article title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
-  <title>Picpic现场互动 - 博客</title>
+  <title>{% if page.title %}{{ page.title }} - Picpic现场互动博客{% else %}Picpic现场互动 - 博客{% endif %}</title>
   <link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
