change format of blog

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,16 +14,28 @@ layout: default
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
+        <div class="post-container">
+        <div class="post-word">
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
           </a>
         </h3>
+        <p class="post-description">
+              {{ post.description | escape }}
+        </p>
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
+        </div>
+        {%- if post.feature_image -%}
+        <div class="feature-image-wrapper">
+        <img class="feature-image" src="{{site.baseurl}}{{post.feature_image}}"/> 
+        </div>
+        {%- endif -%}
+      </div>
       </li>
       {%- endfor -%}
     </ul>
