add adsense in blog head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,11 @@
   ">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css" /> {%- feed_meta -%} {%- if jekyll.environment == 'production' and
   site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%}
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-9042381910330866",
+            enable_page_level_ads: true
+      });
+  </script>
 </head>
