--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -84,4 +84,15 @@ layout: default
       line-height: 16px;
     }
   </style>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Blog Post Bottom -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-9042381910330866"
+       data-ad-slot="2883436644"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </article>
