--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,12 +19,7 @@
         <div class="trigger">
             <a class="page-link" href="{{ site.home_url | absolute_url }}">{{ site.home_title | escape }}</a>
             <a class="page-link" href="{{ '/' | relative_url }}">{{ site.blog_home_title | escape }}</a>
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
+            <a class="page-link" href="{{ '/about' | relative_url }}">{{ site.about_title | escape }}</a>
         </div>
       </nav>
     {%- endif -%}
