switch to use static.picpiclive.com

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
   <title>{% if page.title %}{{ page.title }} - Picpic现场互动博客{% else %}Picpic现场互动 - 博客{% endif %}</title>
-  <link rel="icon" type="image/png" href="https://static-cn.picpiclive.com/favicon-48x48.png" sizes="48x48" />
-  <link rel="icon" type="image/png" href="https://static-cn.picpiclive.com/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/x-icon" href="https://static-cn.picpiclive.com/favicon.ico" />
+  <link rel="icon" type="image/png" href="https://static.picpiclive.com/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" type="image/png" href="https://static.picpiclive.com/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/x-icon" href="https://static.picpiclive.com/favicon.ico" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="format-detection" content="telephone=no" />
