update chinese branding

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
-  <title>{% if page.title %}{{ page.title }} - 皮豆互娱博客{% else %}皮豆互娱 - 博客{% endif %}</title>
+  <title>{% if page.title %}{{ page.title }} - 皮豆工作室博客{% else %}皮豆工作室 - 博客{% endif %}</title>
   <link rel="icon" type="image/png" href="https://static.picpiclive.com/favicon-48x48.png" sizes="48x48" />
   <link rel="icon" type="image/png" href="https://static.picpiclive.com/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/x-icon" href="https://static.picpiclive.com/favicon.ico" />
@@ -12,10 +12,10 @@
   <meta name="format-detection" content="telephone=no" />
   <meta
     name="description"
-    content="皮豆互娱 - 博客"
+    content="皮豆工作室 - 博客"
   />
-  <meta name="application-name" content="皮豆互娱" />
-  <meta name="apple-mobile-web-app-title" content="皮豆互娱" />
+  <meta name="application-name" content="皮豆工作室" />
+  <meta name="apple-mobile-web-app-title" content="皮豆工作室" />
   {%- seo -%} <link rel="stylesheet" href="
   {{
     "/assets/main.css" | relative_url
